[package]
edition = "2021"
name = "w5_lib"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.71"
base64-simd = "0.8.0"
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.6", default-features = false, features = [
  "napi8",
  "error_anyhow"
] }
napi-derive = "2.12.5"
vbyte = "0.1.0"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
opt-level = 3
incremental = true
codegen-units = 1
overflow-checks = false
panic = 'abort'
debug-assertions = false
