[package]
edition = "2021"
name = "w5_lib"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.71"
base-x = "0.2.11"
blake3 = "1.3.3"
napi-derive = "2.12.5"
ordered-varint = "2.0.0"
rand = "0.8.5"
vbyte = "0.1.0"
z85 = "3.0.5"
xxhash-rust = { version = "0.8.6", features = ["xxh3", "xxh32"] }
psl = "2.1.3"

[dependencies.napi]
#version = "2.12.6"
path = "./lib/napi-rs"
default-features = false
features = [
  "napi8",
  "error_anyhow"
  # "tokio_rt",
  # "async"
]

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
opt-level = 3
incremental = true
codegen-units = 1
overflow-checks = false
panic = 'abort'
debug-assertions = false
strip = true
